--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
 	},
 	"dependencies": {
+		"date-fns": "^4.1.0",
+		"jose": "^6.0.12",
+		"jwt-decode": "^4.0.0",
 		"next": "15.3.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
