--- a/package.json
+++ b/package.json
@@ -13,20 +13,30 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
 	},
 	"dependencies": {
+		"cron-parser": "^5.3.0",
 		"date-fns": "^4.1.0",
+		"diff-match-patch": "^1.0.5",
 		"jose": "^6.0.12",
 		"jwt-decode": "^4.0.0",
+		"lucide-react": "^0.525.0",
 		"next": "15.3.5",
+		"qrcode.react": "^4.2.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-markdown": "^10.1.0",
+		"react-syntax-highlighter": "^15.6.1",
+		"remark-gfm": "^4.0.1"
 	},
 	"devDependencies": {
 		"@cloudflare/next-on-pages": "^1.13.12",
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/diff-match-patch": "^1.0.36",
 		"@types/node": "^20.19.9",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/react-syntax-highlighter": "^15.5.13",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.5",
 		"tailwindcss": "^4",
