--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
 	},
 	"dependencies": {
+		"browser-image-compression": "^2.0.2",
 		"cron-parser": "^5.3.0",
 		"date-fns": "^4.1.0",
 		"diff-match-patch": "^1.0.5",
@@ -34,6 +35,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/diff-match-patch": "^1.0.36",
 		"@types/node": "^20.19.9",
+		"@types/qrcode.react": "^1.0.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@types/react-syntax-highlighter": "^15.5.13",
