--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
 		"browser-image-compression": "^2.0.2",
 		"cron-parser": "^5.3.0",
 		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
 		"diff-match-patch": "^1.0.5",
 		"jose": "^6.0.12",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
 		"next": "15.3.5",
 		"qrcode.react": "^4.2.0",
+		"random-words": "^2.0.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-markdown": "^10.1.0",
 		"react-syntax-highlighter": "^15.6.1",
-		"remark-gfm": "^4.0.1"
+		"remark-gfm": "^4.0.1",
+		"sql-formatter": "^15.6.6"
 	},
 	"devDependencies": {
 		"@cloudflare/next-on-pages": "^1.13.12",
