--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"browser-image-compression": "^2.0.2",
 		"cron-parser": "^5.3.0",
+		"d3-shape": "^3.2.0",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"diff-match-patch": "^1.0.5",
@@ -28,8 +29,11 @@
 		"react-dom": "^19.0.0",
 		"react-markdown": "^10.1.0",
 		"react-syntax-highlighter": "^15.6.1",
+		"recharts": "^3.1.0",
 		"remark-gfm": "^4.0.1",
-		"sql-formatter": "^15.6.6"
+		"sql-formatter": "^15.6.6",
+		"ua-parser-js": "^2.0.4",
+		"whois-json": "^2.0.4"
 	},
 	"devDependencies": {
 		"@cloudflare/next-on-pages": "^1.13.12",
@@ -42,6 +46,8 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@types/react-syntax-highlighter": "^15.5.13",
+		"@types/ua-parser-js": "^0.7.39",
+		"@types/whois-json": "^2.0.4",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.5",
 		"tailwindcss": "^4",
