--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"diff-match-patch": "^1.0.5",
+		"framer-motion": "^12.23.12",
 		"jose": "^6.0.12",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
