--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-markdown": "^10.1.0",
+		"react-select": "^5.10.2",
 		"react-syntax-highlighter": "^15.6.1",
 		"recharts": "^3.1.0",
 		"remark-gfm": "^4.0.1",
