--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
 	},
 	"dependencies": {
+		"@capacitor/android": "^7.4.2",
+		"@capacitor/cli": "^7.4.2",
+		"@capacitor/core": "^7.4.2",
 		"browser-image-compression": "^2.0.2",
 		"cron-parser": "^5.3.0",
 		"d3-shape": "^3.2.0",
