--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"date-fns-tz": "^3.2.0",
 		"diff-match-patch": "^1.0.5",
 		"framer-motion": "^12.23.12",
+		"html2canvas": "^1.4.1",
 		"jose": "^6.0.12",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
@@ -34,7 +35,9 @@
 		"recharts": "^3.1.0",
 		"remark-gfm": "^4.0.1",
 		"sql-formatter": "^15.6.6",
+		"tone": "^15.1.22",
 		"ua-parser-js": "^2.0.4",
+		"uuid": "^11.1.0",
 		"whois-json": "^2.0.4"
 	},
 	"devDependencies": {
