--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"pages:build": "npx @cloudflare/next-on-pages",
 		"preview": "npm run pages:build && wrangler pages dev",
 		"deploy": "npm run pages:build && wrangler pages deploy",
-		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts"
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./env.d.ts",
+		"postbuild": "next-sitemap"
 	},
 	"dependencies": {
 		"browser-image-compression": "^2.0.2",
@@ -25,6 +26,7 @@
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
 		"next": "15.3.5",
+		"next-sitemap": "^4.2.3",
 		"qrcode.react": "^4.2.0",
 		"random-words": "^2.0.1",
 		"react": "^19.0.0",
