--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"postbuild": "next-sitemap"
 	},
 	"dependencies": {
+		"@types/three": "^0.179.0",
 		"browser-image-compression": "^2.0.2",
 		"cron": "^4.3.3",
 		"cron-parser": "^5.3.0",
@@ -38,6 +39,7 @@
 		"recharts": "^3.1.0",
 		"remark-gfm": "^4.0.1",
 		"sql-formatter": "^15.6.6",
+		"three": "^0.179.1",
 		"tone": "^15.1.22",
 		"ua-parser-js": "^2.0.4",
 		"uuid": "^11.1.0",
