--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"postbuild": "next-sitemap"
 	},
 	"dependencies": {
+		"@monaco-editor/react": "^4.7.0",
 		"@types/three": "^0.179.0",
 		"browser-image-compression": "^2.0.2",
 		"cron": "^4.3.3",
@@ -25,10 +26,12 @@
 		"framer-motion": "^12.23.12",
 		"html2canvas": "^1.4.1",
 		"jose": "^6.0.12",
+		"js-yaml": "^4.1.0",
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.525.0",
 		"next": "15.3.5",
 		"next-sitemap": "^4.2.3",
+		"next-themes": "^0.4.6",
 		"qrcode.react": "^4.2.0",
 		"random-words": "^2.0.1",
 		"react": "^19.0.0",
@@ -39,6 +42,7 @@
 		"recharts": "^3.1.0",
 		"remark-gfm": "^4.0.1",
 		"sql-formatter": "^15.6.6",
+		"swagger-ui-react": "^5.28.1",
 		"three": "^0.179.1",
 		"tone": "^15.1.22",
 		"ua-parser-js": "^2.0.4",
@@ -51,11 +55,13 @@
 		"@tailwindcss/postcss": "^4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/diff-match-patch": "^1.0.36",
+		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^20.19.9",
 		"@types/qrcode.react": "^1.0.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@types/react-syntax-highlighter": "^15.5.13",
+		"@types/swagger-ui-react": "^5.18.0",
 		"@types/ua-parser-js": "^0.7.39",
 		"@types/whois-json": "^2.0.4",
 		"eslint": "^9",
